fix(button): add white space property to not overflow text (#591)

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -16,6 +16,7 @@
 .atom-button {
   margin: 0;
   text-transform: inherit;
+  white-space: normal;
 
   &[color='white'] {
     --ion-color-base: var(--color-neutral-white);
